--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,10 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "dasun4u/laravel-ideabiz-handler": "1.3",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
+        "guzzlehttp/guzzle": "6.5.3",
         "laravel/framework": "^8.12",
         "laravel/jetstream": "^2.3",
         "laravel/sanctum": "^2.6",
